# Calisto-trncmp

./: .gitignore  00-PointNet.sh  CMakeLists.txt  CONTRACT  Makefile  README.md  SConstruct  TODO
HOLD/: stl_CSVFile.cc  stl_CSVFile.hh
HOLD/nervenet/: execute_network.cc  make_network.cc  train_network.cc  validate_network.cc
HOLD/nns-include/: BPNN.hh  Layer.hh  Transfer.hh
HOLD/nns-source/: BPNN.cc  Layer.cc  Transfer.cc
License/: COPYRIGHT  DFARS-252.227-7014
apps/: CMakeLists.txt
apps/PointCloud/: CMakeLists.txt  CompareGKB.cc  CopyGKB.cc  DisplayCompare.cc  DisplayGKBHorizon.cc  PC2Horizon.cc  read_gkb.cc  read_point_cloud.cc
apps/PointCloud/lib/: gkb_horiz.cc  gkb_horiz.hh  point_cloud.cc  point_cloud.hh
apps/convert/: CMakeLists.txt  main.cc  mylocal.hh
apps/nervenet/: CMakeLists.txt  execute_network.cc  make_network.cc  train_network.cc  validate_network.cc
apps/threads/: CMakeLists.txt  test01.cc  test02.cc
apps/tictactoe/: CMakeLists.txt  build_table.cc  state.cc  state.hh  state_table.cc  state_table.hh
docs/: Doxyfile.in  doxygen.in
scripts/: ALIAS_NN  CLIMap.py  CardShuffle.py  FixDox.py  MakeCovData2.py  MakeCovData3.py  MakeIrisExemplar.sh  MakeSVD.py  MakeSVD3.py  MakeTestMatrix.py  MatTranspose.py  ParseGKB.m  TestCovData.py  TestInvDet.py  TestRegex  TextStrip.py  VTEST.py  matfix1.sed  mkEigen.py  swap.gpt
src/: CMakeLists.txt  SConstruct
src/ctest/: CMakeLists.txt  ctest_appopt.cc  ctest_blas.cc  ctest_bpnn.cc  ctest_configdb.cc  ctest_csvfile.cc  ctest_datetime.cc  ctest_dropoff.cc  ctest_eigen.cc  ctest_entropy.cc  ctest_fixednormal.cc  ctest_integrate.cc  ctest_lapack.cc  ctest_psgraph.cc  ctest_refkdtree.cc  ctest_rk4.cc  ctest_shuffle.cc  ctest_stream.cc  ctest_thread.cc  ctest_tlogger.cc  ctest_transfer.cc  ctest_version.cc  ctest_wedge.cc
src/include/: AbsoluteDate.hh  AppOptions.hh  Array.hh  BPNN.hh  CSVFile.hh  ConfigDB.hh  ConfusionMatrix.hh  Counter.hh  DateComponents.hh  DateTime.hh  Dice.hh  DropOff.hh  EigenSystem.hh  Entropy.hh  Entropy_XORShift.hh  Exemplar.hh  FileTool.hh  FixedNormal.hh  ISO8601.hh  LinAlg.hh  LinAlg2D.hh  LinAlg3D.hh  Matrix.hh  Matrix2D.hh  Matrix3D.hh  PCA.hh  PSGraph.hh  RK4.hh  RunStat.hh  SThread.hh  Statistics.hh  StopWatch.hh  StringTool.hh  TLogger.hh  Table.hh  TimeComponents.hh  VarReal.hh  Vector.hh  Vector2D.hh  Vector3D.hh  (+11 more)
src/include/astro/: OrbitBody.hh  Orrey.hh
src/include/evo/: Encoding.hh  Metric.hh  Model.hh  Population.hh  RealEncoding.hh  ToolKit.hh
src/include/fuzzy/: Group.hh  LeftTrapezoidSet.hh  Partition.hh  RightTrapezoidSet.hh  Set.hh  TriangleSet.hh
src/include/net/: UDPTransport.hh
src/include/nns/: BPNN.hh  Layer.hh  Transfer.hh  activate.hh  cost.hh  ffnn.hh  layer.hh
src/source/: AbsoluteDate.cc  AppOptions.cc  BPNN.cc  CSVFile.cc  ConfigDB.cc  ConfusionMatrix.cc  Counter.cc  DateComponents.cc  DateTime.cc  Dice.cc  DropOff.cc  EigenSystem.cc  Entropy.cc  Entropy_XORShift.cc  Exemplar.cc  FileTool.cc  FixedNormal.cc  ISO8601.cc  LinAlg.cc  LinAlg2D.cc  LinAlg3D.cc  Matrix.cc  Matrix2D.cc  Matrix3D.cc  PCA.cc  PSGraph.cc  RK4.cc  RefKDTree.cc  RunStat.cc  SThread.cc  Statistics.cc  StringTool.cc  TLogger.cc  Table.cc  TimeComponents.cc  VarReal.cc  Vector.cc  Vector2D.cc  Vector3D.cc  WorldFile.cc  (+6 more)
src/source/evo/: Encoding.cc  Metric.cc  Population.cc  RealEncoding.cc  ToolKit.cc
src/source/fuzzy/: Group.cc  LeftTrapezoidSet.cc  Partition.cc  RightTrapezoidSet.cc  Set.cc  TriangleSet.cc
src/source/net/: UDPTransport.cc
src/source/nns/: BPNN.cc  Layer.cc  Transfer.cc  activate.cc  cost.cc  ffnn.cc  layer.cc
src/utest/: CMakeLists.txt  main.cc  trncmp_unitTest.cc
src/utest/arrays/: CMakeLists.txt  utest_arrayfunc.cc  utest_copyclone.cc  utest_summation.cc
src/utest/base/: CMakeLists.txt  utest_author.cc  utest_mathdef.cc  utest_mathdef_inline.cc  utest_version.cc
src/utest/blas/: CMakeLists.txt  utest_linalg.cc  utest_matrix.cc  utest_vector.cc
src/utest/configdb/: CMakeLists.txt  utest_comment.cc  utest_config.cc  utest_entry.cc  utest_section.cc
src/utest/data/: CMakeLists.txt  utest_array.cc  utest_exemplar.cc  utest_stats.cc  utest_table.cc  utest_varreal.cc
src/utest/evo/: CMakeLists.txt  utest_metric.cc  utest_real_enc.cc  utest_toolkit.cc
src/utest/fuzzy/: CMakeLists.txt  utest_fset.cc  utest_group.cc  utest_partition.cc
src/utest/linalg/: CMakeLists.txt  utest_linalg2d.cc  utest_linalg3d.cc
src/utest/matvec/: CMakeLists.txt  utest_matrix2d.cc  utest_matrix3d.cc  utest_vector2d.cc  utest_vector3d.cc
src/utest/nervenet/: CMakeLists.txt  utest_activate.cc  utest_alloc.cc  utest_cost.cc  utest_layer.cc
src/utest/strings/: CMakeLists.txt  utest_stringtool.cc
src/utest/time/: CMakeLists.txt  utest_absolute.cc  utest_date.cc  utest_datetime.cc  utest_iso8601.cc  utest_time.cc
src/utest/vector/: CMakeLists.txt  utest_vector2d.cc  utest_vector3d.cc
